@@ -27,6 +27,7 @@ import org.apache.ranger.plugin.store.GeolocationStore;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 public abstract class RangerAbstractGeolocationProvider extends RangerAbstractContextEnricher {
@@ -60,15 +61,20 @@ public abstract class RangerAbstractGeolocationProvider extends RangerAbstractCo
 
             try {
                 // Get the class definition and ensure it is of the correct type
+                Class<?> cls = Class.forName(geoSourceLoader, false, RangerAbstractGeolocationProvider.class.getClassLoader());
+                if (!GeolocationStore.class.isAssignableFrom(cls)) {
+                    throw new ClassCastException("class " + geoSourceLoader + " is not assignable to " + GeolocationStore.class.getName());
+                }
+
                 @SuppressWarnings("unchecked")
-                Class<GeolocationStore> geoSourceLoaderClass = (Class<GeolocationStore>) Class.forName(geoSourceLoader);
+                Class<GeolocationStore> geoSourceLoaderClass = (Class<GeolocationStore>) cls;
                 // instantiate the loader class and initialize it with options
-                geoStore = geoSourceLoaderClass.newInstance();
+                geoStore = geoSourceLoaderClass.getDeclaredConstructor().newInstance();
             } catch (ClassNotFoundException exception) {
                 LOG.error("RangerAbstractGeolocationProvider.init() - Class {} not found, exception={}", geoSourceLoader, exception.toString());
             } catch (ClassCastException exception) {
                 LOG.error("RangerAbstractGeolocationProvider.init() - Class {} is not a type of GeolocationStore, exception={}", geoSourceLoader, exception.toString());
-            } catch (IllegalAccessException | InstantiationException exception) {
+            } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException exception) {
                 LOG.error("RangerAbstractGeolocationProvider.init() - Class {} could not be instantiated, exception={}", geoSourceLoader, exception.toString());
             }
 
